--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -1,1 +1,4 @@
-header.header
+header.grid-container.header
+    a.header_logo(href="/")
+        img(src="./assets/img/logo.svg", alt="Lord")
+    +menu()(class="header_menu")
