--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,1 +1,15 @@
 extends ../_layout
+
+block const
+    - const page = 'home'
+
+
+block content
+    section.grid-container.container.main
+        .grid-x.grid-margin-x.main_container.large-up-2
+            .cell.main_content
+                img(src="../assets/img/logo_main.svg", alt="Lord")
+                h1.main_header
+                    | Cлова о главном
+            .cell.main_photo
+                img(src="../assets/img/photos/main.jpg" srcset="../assets/img/photos/main@2x.jpg 2x, ../assets/img/photos/main.jpg 1x" alt="Lord")
