--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -65,12 +65,12 @@
 // 1. Global
 // ---------
 
-$global-font-size: 100%;
-$global-width: rem-calc(1200);
+$global-font-size: 14px;
+$global-width: rem-calc(942);
 $global-lineheight: 1.3;
 $foundation-palette: (
-  primary: #1779ba,
-  secondary: #767676,
+  primary: #fecc74,
+  secondary: #2d2e33,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
@@ -80,9 +80,9 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #000;
 $white: #fff;
-$body-background: $white;
-$body-font-color: $black;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-background: $black;
+$body-font-color: $white;
+$body-font-family: 'Avenir Next', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
@@ -135,7 +135,7 @@ $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
 $header-color: inherit;
 $header-lineheight: 1.4;
-$header-margin-bottom: 0.5rem;
+$header-margin-bottom: 0;
 $header-styles: (
   small: (
     'h1': ('fs': 24),
@@ -146,7 +146,7 @@ $header-styles: (
     'h6': ('fs': 16),
   ),
   medium: (
-    'h1': ('fs': 48),
+    'h1': ('fs': 30, 'lh': 1.73),
     'h2': ('fs': 40),
     'h3': ('fs': 31),
     'h4': ('fs': 25),
@@ -158,7 +158,7 @@ $header-text-rendering: optimizeLegibility;
 $small-font-size: 80%;
 $header-small-font-color: $medium-gray;
 $paragraph-lineheight: 1.6;
-$paragraph-margin-bottom: 1rem;
+$paragraph-margin-bottom: 0;
 $paragraph-text-rendering: optimizeLegibility;
 $code-color: $black;
 $code-font-family: $font-family-monospace;
@@ -166,8 +166,8 @@ $code-font-weight: $global-weight-normal;
 $code-background: $light-gray;
 $code-border: 1px solid $medium-gray;
 $code-padding: rem-calc(2 5 1);
-$anchor-color: $primary-color;
-$anchor-color-hover: scale-color($anchor-color, $lightness: -14%);
+$anchor-color: $white;
+$anchor-color-hover: $primary-color;
 $anchor-text-decoration: none;
 $anchor-text-decoration-hover: none;
 $hr-width: $global-width;
@@ -470,9 +470,9 @@ $mediaobject-image-width-stacked: 100%;
 $menu-margin: 0;
 $menu-nested-margin: $global-menu-nested-margin;
 $menu-items-padding: $global-menu-padding;
-$menu-simple-margin: 1rem;
-$menu-item-color-active: $white;
-$menu-item-background-active: get-color(primary);
+$menu-simple-margin: 15px;
+$menu-item-color-active: $primary-color;
+$menu-item-background-active: none;
 $menu-icon-spacing: 0.25rem;
 $menu-item-background-hover: $light-gray;
 $menu-state-back-compat: true;
@@ -854,7 +854,7 @@ $grid-container: $global-width;
 $grid-columns: 12;
 $grid-margin-gutters: (
   small: 20px,
-  medium: 30px
+  medium: 4px
 );
 $grid-padding-gutters: $grid-margin-gutters;
 $block-grid-max: 8;
