--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,8 +6,8 @@
 
 @include foundation-global-styles;
 //@include foundation-grid;
-// @include foundation-flex-grid;
-// @include foundation-xy-grid-classes;
+@include foundation-flex-grid;
+@include foundation-xy-grid-classes;
 @include foundation-typography;
 @include foundation-button;
 @include foundation-forms;
@@ -20,7 +20,7 @@
 // @include foundation-callout;
 // @include foundation-card;
 // @include foundation-close-button;
-// @include foundation-menu;
+@include foundation-menu;
 // @include foundation-menu-icon;
 // @include foundation-drilldown-menu;
 // @include foundation-dropdown;
@@ -40,7 +40,7 @@
 // @include foundation-reveal;
 // @include foundation-switch;
 // @include foundation-table;
-// @include foundation-tabs;
+@include foundation-tabs;
 // @include foundation-thumbnail;
 // @include foundation-title-bar;
 // @include foundation-tooltip;
@@ -58,8 +58,11 @@
 @import 'components/fonts';
 @import 'components/base';
 @import 'components/button';
+@import 'components/social';
 // @import 'components/offcanvas';
 
 // Sections
 @import 'sections/header';
+@import 'sections/main';
+@import 'sections/music';
 @import 'sections/footer';
