--- a/src/scss/components/_base.scss
+++ b/src/scss/components/_base.scss
@@ -28,16 +28,30 @@ html, body{
 .wrap {
     overflow: hidden;
     min-width: 320px;
+    display: flex;
     flex-direction: column;
     align-items: stretch;
     justify-content: flex-start;
     min-height: 100vh;
+    background-image: linear-gradient(91deg, rgba(45, 46, 50, 0.5) 0%, rgba(18, 18, 21, 0.2) 72%, rgba(8, 7, 10, 0.5) 100%);
+    > *{
+        width: 100%;
+    }
 }
 
 a{
     transition: 200ms;
 }
 
+svg{
+    display: block;
+}
+
 .js-off-canvas-overlay{
     -webkit-tap-highlight-color: transparent;
+}
+
+.container{
+    flex: 1 1 100%;
+    display: flex;
 }
