--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -1,3 +1,23 @@
 .header{
-    
+    position: relative;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &_logo{
+        position: absolute;
+        left: 4px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    &_menu{
+        font-size: 16px;
+        letter-spacing: 1px;
+        li + li{
+            margin-left: 36px;
+        }
+        a{
+            line-height: 1.3;
+        }
+    }
 }
