music page with player

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,11 +2,12 @@ extends ../_layout
 
 block const
     - const page = 'home'
+    - const name = 'Home'
 
 
 block content
     section.grid-container.container.main
-        .grid-x.grid-margin-x.main_container.large-up-2
+        .grid-x.grid-margin-x.container_inner.main_container.large-up-2
             .cell.main_content
                 img(src="../assets/img/logo_main.svg", alt="Lord")
                 h1.main_header
