--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -58,6 +58,8 @@
 @import 'components/fonts';
 @import 'components/base';
 @import 'components/button';
+@import 'components/tabs';
+@import 'components/player';
 @import 'components/social';
 // @import 'components/offcanvas';
 
