--- a/src/scss/components/_tabs.scss
+++ b/src/scss/components/_tabs.scss
@@ -12,6 +12,7 @@
         position: relative;
         min-height: 617px;
         overflow: hidden;
+        border: 0;
     }
     &-panel{
         margin-top: 50px;
