--- a/src/pug/components/_player.pug
+++ b/src/pug/components/_player.pug
@@ -7,8 +7,10 @@
         .player_waves
             .player_waveform#waveform
                 .player_waveform_played#playerPlayed
+                    img(src='./assets/img/wave_played.svg)', style='display:none')
             .player_progress
                 .player_progress_loaded#playerLoaded
         #playerEndTime.player_track_time
             | 00:00
     button#playerButton.player_button
+        span
