--- a/src/scss/components/_base.scss
+++ b/src/scss/components/_base.scss
@@ -1,5 +1,7 @@
 html, body{
     -webkit-overflow-scrolling: touch;
+    height: 100%;
+    filter: expression(document.execCommand("BackgroundImageCache", false, true));
 }
 
 // Styled scrollbar
@@ -31,8 +33,9 @@ html, body{
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    justify-content: flex-start;
-    min-height: 100vh;
+    justify-content: space-between;
+    min-height: 790px;
+    height: 100%;
     background-image: linear-gradient(91deg, rgba(45, 46, 50, 0.5) 0%, rgba(18, 18, 21, 0.2) 72%, rgba(8, 7, 10, 0.5) 100%);
     > *{
         width: 100%;
@@ -52,7 +55,7 @@ svg{
 }
 
 .container{
-    flex: 1 1 100%;
+    flex: 1 1 auto;
     display: flex;
     &_inner{
         width: 100%;
