video page with player

--- a/src/pug/components/_player.pug
+++ b/src/pug/components/_player.pug
@@ -7,7 +7,7 @@
         .player_waves
             .player_waveform#waveform
                 .player_waveform_played#playerPlayed
-                    img(src='./assets/img/wave_played.svg)', style='display:none')
+                    img(src='./assets/img/wave_played.svg', style='display:none')
             .player_progress
                 .player_progress_loaded#playerLoaded
         #playerEndTime.player_track_time
