--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,3 +14,4 @@ block content
                     | Cлова о главном
             .cell.main_photo
                 img(src="../assets/img/photos/main.jpg" srcset="../assets/img/photos/main@2x.jpg 2x, ../assets/img/photos/main.jpg 1x" alt="Lord")
+block js
