--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -90,7 +90,7 @@ $global-position: 1rem;
 $global-weight-normal: normal;
 $global-weight-bold: bold;
 $global-radius: 0;
-$global-menu-padding: 0.7rem 1rem;
+$global-menu-padding: 0.36rem 1rem;
 $global-menu-nested-margin: 1rem;
 $global-text-direction: ltr;
 $global-flexbox: true;
@@ -713,9 +713,9 @@ $prototype-text-overflow: ellipsis;
 // 46. Responsive Embed
 // --------------------
 
-$responsive-embed-margin-bottom: rem-calc(16);
+$responsive-embed-margin-bottom: 0;
 $responsive-embed-ratios: (
-  default: 4 by 3,
+  default: 16 by 9,
   widescreen: 16 by 9,
 );
 
