--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -23,3 +23,4 @@ html(lang="ru")
             +social(socials)(class="vertical")
         block js
             script(src="./js/app.min.js")
+        script(src="./js/svg4everybody.min.js")
