--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -25,7 +25,7 @@
 // @include foundation-drilldown-menu;
 // @include foundation-dropdown;
 // @include foundation-dropdown-menu;
-// @include foundation-responsive-embed;
+@include foundation-responsive-embed;
 // @include foundation-label;
 // @include foundation-media-object;
 // @include foundation-off-canvas;
@@ -67,4 +67,5 @@
 @import 'sections/header';
 @import 'sections/main';
 @import 'sections/music';
+@import 'sections/video';
 @import 'sections/footer';
