--- a/src/scss/components/_base.scss
+++ b/src/scss/components/_base.scss
@@ -1,7 +1,5 @@
 html, body{
     -webkit-overflow-scrolling: touch;
-    height: 100%;
-    filter: expression(document.execCommand("BackgroundImageCache", false, true));
 }
 
 // Styled scrollbar
@@ -27,6 +25,10 @@ html, body{
     -webkit-text-fill-color: $black;
 }
 
+body{
+    display: flex;
+}
+
 .wrap {
     overflow: hidden;
     min-width: 320px;
@@ -34,8 +36,9 @@ html, body{
     flex-direction: column;
     align-items: stretch;
     justify-content: space-between;
-    min-height: 790px;
-    height: 100%;
+    // min-height: 790px;
+    min-height: 100vh;
+    width: 100%;
     background-image: linear-gradient(91deg, rgba(45, 46, 50, 0.5) 0%, rgba(18, 18, 21, 0.2) 72%, rgba(8, 7, 10, 0.5) 100%);
     > *{
         width: 100%;
@@ -55,9 +58,9 @@ svg{
 }
 
 .container{
-    flex: 1 1 auto;
-    display: flex;
+    flex-grow: 1;
+    // display: flex;
     &_inner{
-        width: 100%;
+        height: 100%;
     }
 }
