--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -1,14 +1,16 @@
 .header{
     position: relative;
-    height: 100px;
+    padding-top: 24px;
+    height: 74px;
     display: flex;
-    align-items: center;
+    // align-items: center;
     justify-content: center;
     &_logo{
         position: absolute;
         left: 4px;
-        top: 50%;
-        transform: translateY(-50%);
+        // top: 50%;
+        // transform: translateY(-50%);
+        bottom: 0;
     }
     &_menu{
         font-size: 16px;
