--- a/src/scss/sections/_music.scss
+++ b/src/scss/sections/_music.scss
@@ -1,11 +1,9 @@
 .music{
+    padding: 30px 0;
     &_photo{
         align-self: center;
         z-index: -1;
         user-select: none;
-    }
-    &_player{
-        padding-top: 5px;
     }
     &_albums{
         display: flex;
