add concert page

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -72,4 +72,5 @@
 @import 'sections/music';
 @import 'sections/video';
 @import 'sections/photo';
+@import 'sections/concert';
 @import 'sections/footer';
