--- a/src/scss/sections/_music.scss
+++ b/src/scss/sections/_music.scss
@@ -1,5 +1,4 @@
 .music{
-    padding: 30px 0;
     &_photo{
         align-self: center;
         z-index: -1;
@@ -109,6 +108,7 @@
             margin-right: auto;
             margin-left: 15px;
             font-family: 'Proxima Nova', Helvetica, Roboto, Arial, sans-serif;
+            padding-right: 10px;
         }
         &_artist{
             color: rgba($white, 0.4);
