--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -73,4 +73,5 @@
 @import 'sections/video';
 @import 'sections/photo';
 @import 'sections/concert';
+@import 'sections/contact';
 @import 'sections/footer';
