--- a/src/scss/components/_social.scss
+++ b/src/scss/components/_social.scss
@@ -1,14 +1,17 @@
 .social{
-    background-color: rgba($secondary-color, 0.5);
-    padding: 15px;
-    position: fixed;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
     &.vertical{
+        padding: 15px;
+        position: fixed;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        background-color: rgba($secondary-color, 0.5);
         li + li {
             margin: 15px 0 0;
         }
+    }
+    &--contact{
+        margin-top: 30px;
     }
     a{
         color: $primary-color;
