--- a/src/pug/pages/music.pug
+++ b/src/pug/pages/music.pug
@@ -8,3 +8,6 @@ block const
 block content
     include ../sections/_music
     include ../components/_player
+
+block js
+    script(src="./js/music.min.js")
