--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -1,3 +1,4 @@
-footer.grid-container.footer
-    p.footer_copy
-        | © 2019. Официальный сайт.
+footer.footer
+    .grid-container
+        p.footer_copy
+            | © 2019. Официальный сайт.
