--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -1,4 +1,6 @@
-header.grid-container.header
-    a.header_logo(href="/")
-        img(src="./assets/img/logo.svg", alt="Lord")
-    +menu()(class="header_menu")
+header.header
+    .grid-container.header_inner
+        a.header_logo(href="/")
+            img(src="./assets/img/logo.svg", alt="Lord")
+        +menu()(class="header_menu")
+        button.header_hamb(data-open="menu")
