--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -19,7 +19,7 @@
 // @include foundation-button-group;
 // @include foundation-callout;
 // @include foundation-card;
-// @include foundation-close-button;
+@include foundation-close-button;
 @include foundation-menu;
 // @include foundation-menu-icon;
 // @include foundation-drilldown-menu;
@@ -28,7 +28,7 @@
 @include foundation-responsive-embed;
 // @include foundation-label;
 // @include foundation-media-object;
-// @include foundation-off-canvas;
+@include foundation-off-canvas;
 // @include foundation-orbit;
 // @include foundation-pagination;
 // @include foundation-progress-bar;
@@ -58,6 +58,7 @@
 @import 'components/fonts';
 @import 'components/base';
 @import 'components/button';
+@import 'components/menu';
 @import 'components/tabs';
 @import 'components/player';
 @import 'components/social';
