--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,12 +6,13 @@ block const
 
 
 block content
-    section.grid-container.container.main
-        .grid-x.grid-margin-x.container_inner.main_container.large-up-2
-            .cell.main_content
-                img(src="../assets/img/logo_main.svg", alt="Lord")
-                h1.main_header
-                    | Cлова о главном
-            .cell.main_photo
-                img(src="../assets/img/photos/main.jpg" srcset="../assets/img/photos/main@2x.jpg 2x, ../assets/img/photos/main.jpg 1x" alt="Lord")
+    section.container.main
+        .grid-container
+            .grid-x.grid-margin-x.container_inner.main_container
+                .cell.main_content.large-6.medium-3.small-2
+                    img(src="../assets/img/logo_main.svg", alt="Lord")
+                    h1.main_header
+                        | Cлова о главном
+                .cell.main_photo.large-6.medium-9.small-10
+                    img(src="../assets/img/photos/main.jpg" srcset="../assets/img/photos/main@2x.jpg 2x, ../assets/img/photos/main.jpg 1x" alt="Lord")
 block js
