--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -138,7 +138,7 @@ $header-lineheight: 1.4;
 $header-margin-bottom: 0;
 $header-styles: (
   small: (
-    'h1': ('fs': 24),
+    'h1': ('fs': 20, 'lh': 1.3),
     'h2': ('fs': 20),
     'h3': ('fs': 19),
     'h4': ('fs': 18),
@@ -342,16 +342,16 @@ $closebutton-offset-horizontal: (
   medium: 1rem,
 );
 $closebutton-offset-vertical: (
-  small: 0.33em,
+  small: 0.3em,
   medium: 0.5rem,
 );
 $closebutton-size: (
   small: 1.5em,
-  medium: 2em,
+  medium: 4em,
 );
 $closebutton-lineheight: 1;
-$closebutton-color: $dark-gray;
-$closebutton-color-hover: $black;
+$closebutton-color: $primary-color;
+$closebutton-color-hover: darken($primary-color, 15%);
 
 // 16. Drilldown
 // -------------
@@ -493,7 +493,7 @@ $meter-fill-bad: $alert-color;
 
 $offcanvas-sizes: ( small: 250px, );
 $offcanvas-vertical-sizes: ( small: 200px, );
-$offcanvas-background: $light-gray;
+$offcanvas-background: #09090a;
 $offcanvas-shadow: 0 0 10px rgba($black, 0.7);
 $offcanvas-inner-shadow-size: 20px;
 $offcanvas-inner-shadow-color: rgba($black, 0.25);
@@ -504,7 +504,7 @@ $offcanvas-reveal-zindex: 12;
 $offcanvas-transition-length: 0.5s;
 $offcanvas-transition-timing: ease;
 $offcanvas-fixed-reveal: true;
-$offcanvas-exit-background: rgba($white, 0.25);
+$offcanvas-exit-background: rgba($black, 0.25);
 $maincontent-class: 'off-canvas-content';
 
 // 26. Orbit
