--- a/src/scss/components/_base.scss
+++ b/src/scss/components/_base.scss
@@ -1,5 +1,11 @@
 html, body{
     -webkit-overflow-scrolling: touch;
+    min-height: 100%;
+}
+html{
+    @include breakpoint(small down){
+        height: 100%;
+    } 
 }
 
 // Styled scrollbar
@@ -40,6 +46,9 @@ body{
     min-height: 100vh;
     width: 100%;
     background-image: linear-gradient(91deg, rgba(45, 46, 50, 0.5) 0%, rgba(18, 18, 21, 0.2) 72%, rgba(8, 7, 10, 0.5) 100%);
+    @include breakpoint(small down){
+        min-height: 100%;
+    }
     > *{
         width: 100%;
     }
@@ -60,8 +69,12 @@ svg{
 .container{
     flex-grow: 1;
     // display: flex;
-    padding: 30px 0;
-    &_inner{
+    padding: 30px 68px;
+    @include breakpoint(small down){
+        padding: 20px;
+        flex: 1 1 100%;
+    }
+    > .grid-container, &_inner{
         height: 100%;
     }
 }
