--- a/src/scss/components/_social.scss
+++ b/src/scss/components/_social.scss
@@ -6,8 +6,30 @@
         right: 0;
         transform: translateY(-50%);
         background-color: rgba($secondary-color, 0.5);
+        width: 50px;
+        @include breakpoint(medium down){
+            width: auto;
+            position: static;
+            flex-direction: row;
+            background: none;
+            justify-content: center;
+            transform: none;
+            padding: 0 0 60px;
+        }
+        @include breakpoint(small down){
+            padding: 15px 32px;
+            width: 190px;
+            margin: auto;
+            background-color: rgba($secondary-color, 0.5);
+        }
         li + li {
             margin: 15px 0 0;
+            @include breakpoint(medium down){
+                margin: 0 0 0 25px;
+            }
+            @include breakpoint(medium down){
+                margin: 0 0 0 15px;
+            }
         }
     }
     &--contact{
