--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -1,25 +1,73 @@
 .header{
-    position: relative;
-    padding-top: 24px;
+    padding: 24px 0 0;
     height: 74px;
-    display: flex;
-    // align-items: center;
-    justify-content: center;
+    @include breakpoint(medium down){
+        padding: 15px 68px;
+        height: auto;
+        background-color: rgba($secondary-color, 0.1);
+    }
+    @include breakpoint(small down){
+        padding: 15px 20px;
+    }
+    &_inner{
+        width: 100%;
+        height: 100%;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        @include breakpoint(medium down){
+            align-items: center;
+            justify-content: space-between;
+        }
+        
+    }
     &_logo{
         position: absolute;
         left: 4px;
         // top: 50%;
         // transform: translateY(-50%);
         bottom: 0;
+        @include breakpoint(medium down){
+            position: static;
+            width: 38px;
+        }
+        @include breakpoint(small down){
+            width: 28px;
+        }
     }
     &_menu{
         font-size: 16px;
         letter-spacing: 1px;
+        @include breakpoint(medium down){
+            display: none;
+        }
         li + li{
             margin-left: 36px;
         }
         a{
             line-height: 1.3;
         }
+        &_mobile{
+            padding: 50px 30px;
+        }
+    }
+    &_hamb{
+        @include hamburger($primary-color, darken($primary-color, 15%), 32px, 21px, 3px, 3);
+        transition: 300ms;
+        display: none;
+        @include breakpoint(medium down){
+            display: block;
+        }
+        &::after{
+            transition: 300ms;
+        }
+    }
+}
+
+.close-button{
+    transition: 300ms;
+    @include breakpoint(small down){
+        top: 0.1rem;
+        right: 1.5rem;
     }
 }
