--- a/src/scss/components/_player.scss
+++ b/src/scss/components/_player.scss
@@ -11,6 +11,23 @@
     width: 100%;
     transition: 300ms;
     z-index: 5;
+    @include breakpoint(medium down){
+        padding: 0 105px 0 70px;
+        justify-content: center;
+    }
+    @include breakpoint(small down){
+        height: 60px;
+        padding: 0 30px;
+        + .social.vertical{
+            display: none;
+        }
+        &:not(.is_hidden){
+            ~ .footer{
+                margin-top: 10px;
+            }
+        }
+    }
+    
     &.is_hidden{
         opacity: 0;
         visibility: hidden;
@@ -25,6 +42,9 @@
         height: 70px;
         margin-top: -15px;
         align-self: flex-start;
+        @include breakpoint(medium down){
+            display: none;
+        }
     }
     &_track{
         display: flex;
@@ -33,6 +53,13 @@
         max-width: 600px;
         width: 100%;
         font-size: 12px;
+        &_time{
+            &#playerEndTime{
+                @include breakpoint(small down){
+                    display: none;
+                }
+            }
+        }
     }
     &_waves{
         width: 100%;
@@ -40,6 +67,12 @@
         margin: 0 15px;
         position: relative;
         z-index: 1;
+        @include breakpoint(medium down){
+            margin: 0 35px;
+        }
+        @include breakpoint(small down){
+            margin: 0 20px;
+        }
         &.is_loaded{
             .player_progress{
                 display: none;
@@ -104,6 +137,21 @@
         white-space: nowrap;
         text-align: center;
         box-sizing: content-box;
+
+        @include breakpoint(medium down){
+            position: absolute;
+            margin: 0;
+            right: 0;
+            bottom: 0;
+        }
+
+        @include breakpoint(small down){
+            position: static;
+            width: 50px;
+            height: 50px;
+            flex: 0 0 50px;
+            align-self: center;
+        }
 
         &:active,
         &:focus{
