--- a/src/scss/sections/_video.scss
+++ b/src/scss/sections/_video.scss
@@ -5,11 +5,19 @@
     &_container{
         &--small{
             padding-left: 20px;
+            @include breakpoint(medium down){
+                padding: 0;
+                display: flex;
+                
+            }
         }
     }
     &_item{
         position: relative;
         margin-bottom: 26px;
+        @include breakpoint(medium down){
+            margin-bottom: 15px;
+        }
         &--soon{
             position: relative;
             margin: 26px 0 0;
@@ -17,6 +25,13 @@
             background-color: rgba($secondary-color, 0.2);
             font-size: 16px;
             color: rgba($white, 0.3);
+            @include breakpoint(medium down){
+                margin-top: 0;
+                font-size: 14px;
+            }
+            @include breakpoint(small down){
+                height: 100px;
+            }
             > * {
                 position: absolute;
                 width: 100%;
@@ -27,10 +42,21 @@
             p{
                 font-size: 18px;
                 color: $primary-color;
+                @include breakpoint(medium down){
+                    font-size: 16px;
+                }
             }
         }
         &--small{
             cursor: pointer;
+            height: 0;
+            @include breakpoint(medium down){
+                width: calc(50% - 7.5px);
+                padding-bottom: calc(56.25% / 2 - 7.5px);
+                & + & {
+                    margin-left: 15px;
+                }
+            }
             &::after{
                 content: '';
                 position: absolute;
