--- a/src/pug/pages/video.pug
+++ b/src/pug/pages/video.pug
@@ -7,7 +7,7 @@ block const
 
 block content
     section.container.video
-        .grid-container
+        .grid-container.video_inner
             .grid-x.grid-margin-x
                 .cell.large-8
                     .video_item
