--- a/src/scss/components/_social.scss
+++ b/src/scss/components/_social.scss
@@ -27,7 +27,7 @@
             @include breakpoint(medium down){
                 margin: 0 0 0 25px;
             }
-            @include breakpoint(medium down){
+            @include breakpoint(small down){
                 margin: 0 0 0 15px;
             }
         }
