--- a/src/scss/components/_glide.scss
+++ b/src/scss/components/_glide.scss
@@ -1,6 +1,11 @@
 .glide{
     &__slides{
         margin: 0;
+        @include breakpoint(medium only){
+            flex-wrap: wrap;
+            transform: none !important;
+            width: 100% !important;
+        }
     }
     &__slide{
         // box-shadow: 0 12px 48px rgba(0, 0, 0, 0.2);
@@ -9,8 +14,36 @@
         height: 520px;
         transition: transform 300ms;
         overflow: hidden;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+        text-align: center;
+        @include breakpoint(medium only){
+            height: auto;
+            width: calc(50% - 7.5px) !important;
+            margin: 0 0 15px !important;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            &:nth-child(even){
+                margin-left: 15px !important;
+            }
+        }
+        @include breakpoint(small down){
+            height: 456px;
+            img{
+                max-height: 100%;
+            }
+        }
         &:not(.glide__slide--active){
-            transform: scale(0.9);
+            @include breakpoint(large){
+                transform: scale(0.9);
+            }
+        }
+    }
+    &__arrows{
+        @include breakpoint(medium only){
+            display: none;
         }
     }
     &__arrow{
@@ -29,6 +62,9 @@
         }
         &--left{
             left: -17px;
+            @include breakpoint(small down){
+                left: -3px;
+            }
             &::before{
                 @include css-triangle(18.5px, rgba(#1a1b1d, 0.9), left);
                 border-right-width: 27px;
@@ -50,6 +86,9 @@
         }
         &--right{
             right: -17px;
+            @include breakpoint(small down){
+                right: -3px;
+            }
             &::before{
                 @include css-triangle(18.5px, rgba(#1a1b1d, 0.9), right);
                 border-left-width: 27px;
