--- a/src/scss/components/_base.scss
+++ b/src/scss/components/_base.scss
@@ -74,8 +74,11 @@ svg{
         padding: 20px;
         flex: 1 1 100%;
     }
-    > .grid-container, &_inner{
+    > .grid-container{
         width: 100%;
+        height: 100%;
+    }
+    &_inner{
         height: 100%;
     }
 }
